@startuml Class_Diagram_Sprint1
' Sprint 1 — Catalogue, client, panier, commande (état actuel incl. évolutions S1+)

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 8
skinparam packageStyle rectangle

title Diagramme de classes — Sprint 1 (catalogue, panier, commandes)

package "Catalogue" #E8F5F1 {
  class Category {
    + Id : int <<PK>>
    + Name : string {unique}
    + Description : string?
    --
    + Products : ICollection<Product>
  }

  class Product {
    + Id : int <<PK>>
    + Name : string
    + Description : string
    + Price : decimal(10,2)
    + StockQuantity : int
    + CategoryId : int? <<FK>>
    + ImageUrl : string?
    + CreatedAt : DateTime
    + UpdatedAt : DateTime
    --
    + Category : Category?
    + OrderItems : ICollection<OrderItem>
  }
}

package "Client & Panier" #E3F2FD {
  class Customer {
    + Id : int <<PK>>
    + Name : string
    + Email : string {unique}
    + Phone : string
    + PasswordHash : string?
    + CreatedAt : DateTime
    --
    + Orders : ICollection<Order>
  }

  class Cart {
    + Id : int <<PK>>
    + CustomerId : int <<FK>> {unique}
    + UpdatedAt : DateTime
    --
    + Customer : Customer?
    + Items : ICollection<CartItem>
  }

  class CartItem {
    + Id : int <<PK>>
    + CartId : int <<FK>>
    + ProductId : int <<FK>>
    + Quantity : int
    --
    + Cart : Cart?
    + Product : Product?
  }
}

package "Commande" #FFF8E1 {
  class Order {
    + Id : int <<PK>>
    + CustomerId : int <<FK>>
    + SubtotalAmount : decimal(10,2)
    + TaxAmount : decimal(10,2)
    + ShippingAmount : decimal(10,2)
    + TotalAmount : decimal(10,2)
    + CreatedAt : DateTime
    + Status : string
    + PromotionCode : string?
    --
    + Customer : Customer?
    + OrderItems : ICollection<OrderItem>
  }

  class OrderItem {
    + Id : int <<PK>>
    + OrderId : int <<FK>>
    + ProductId : int <<FK>>
    + Quantity : int
    + Price : decimal(10,2)
    + CreatedAt : DateTime
    --
    + Order : Order?
    + Product : Product?
  }
}

package "Constantes" #F5F5F5 {
  class OrderStatuses <<utility>> {
    {static} + Pending : string
    {static} + Confirmed : string
    {static} + Shipped : string
    {static} + Cancelled : string
  }

  class AuthRoles <<utility>> {
    {static} + Customer : string
  }
}

Category "1" o-- "0..*" Product
Customer "1" --> "0..*" Order
Customer "1" o-- "0..1" Cart
Cart "1" *-- "0..*" CartItem
Product "1" <-- "0..*" CartItem
Order "1" *-- "1..*" OrderItem
Product "1" <-- "0..*" OrderItem
Order ..> OrderStatuses : Status

note right of Order
  **Sprint 1 + évolutions**
  • Checkout authentifié (JWT Customer)
  • Création en **Pending** + réservation stock
  • PromotionCode (champ, règles S2)
end note

note bottom of Product
  TryDecrementStockAsync / IncrementStockAsync
  (couche Repository — hors diagramme)
end note

@enduml
